added to index.html base starter file

--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-    
+    <!-- Font Suggestions? I like Roboto / Raleway / Nunito Sans / Rubik Distressed or Rubik Iso (could be useful for certain stuff) / -->
     <title>Crypto Genie</title>
 </head>
 
 <body>
 
+    <header class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <div class="row row-content align-items-center">
+
+            </div>
+        </div>
+
+    </header>
+
+    <footer>
+
+    </footer>
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
