--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <!--Header Top Menu-->
         <div class="row mt-3 text-center">
             <div class="col">
-                <p class="header-content d-none d-md-inline">Market Cap: <span class="text-primary">$1,034,387,398,958.45</span></p>
+                <p class="header-content d-none d-lg-inline">Market Cap: <span class="text-primary">$1,034,387,398,958.45</span></p>
             </div>
             <div class="col">
-                <p class="header-content d-none d-md-inline">24h Vol: <span class="text-primary">$69,034,387,398.45</span></p>
+                <p class="header-content d-none d-lg-inline">24h Vol: <span class="text-primary">$69,034,387,398.45</span></p>
             </div>
             <div class="col">
-                <p class="header-content d-none d-md-inline">Dominance: <span class="text-primary">BTC: 39.7% | ETH 19.7%</span></p>
+                <p class="header-content d-none d-lg-inline">Dominance: <span class="text-primary">BTC: 39.7% | ETH 19.7%</span></p>
             </div>
             <div class="col">
                 <div class="btn-group" role="group" aria-label="login signup buttons">
@@ -48,7 +48,7 @@
         <nav class="navbar navbar-expand-lg">
 
             <!--Logo and Name-->
-            <div class="col-5 col-md-2">
+            <div class="col-4 col-xs-6 col-lg-3">
                 <a class="site-name" href="#"><h2>Coin&nbsp;Genie</h2></a>
                 <img src="images/coingenie.svg" alt="Coin Genie Logo" class="logo d-block">
             </div>
@@ -59,28 +59,28 @@
             </button>
 
             <!--Navbar Links-->
-            <div class="col-lg-6">
+            <div class="col-lg-6 me-0">
                 <div class="collapse navbar-collapse" id="mainNavbar">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item mr-auto mr-lg-0">
-                            <a class="nav-link text-dark active" href="#">Cryptocurrencies</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark active float-right" href="#">Cryptocurrencies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Exchanges</a>
+                            <a class="nav-link text-dark float-right" href="#">Exchanges</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Trading Tools</a>
+                            <a class="nav-link text-dark float-right" href="#">Trading Tools</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Learn</a>
+                            <a class="nav-link text-dark float-right" href="#">Learn</a>
                         </li>
                     </ul>
                 </div>
             </div>
             
             <!--Navbar Search Box-->
-            <div class="d-none d-lg-inline col-lg-4">
-                <form class="d-none d-md-flex me-0">
+            <div class="col-0 d-none d-lg-inline col-lg-3">
+                <form class="d-flex me-0">
                         <input class="form-control form-control-sm" type="search" aria-label="Search">
                         <button class="btn btn-primary btn-sm" type="submit">Search</button>
                 </form>
@@ -93,10 +93,16 @@
         <!--Header Top Menu-->
         <div class="row justify-content-end">
             <div class="col-3">
-                <p class="header-content d-none d-md-inline"></e>Crypto Fear & Greed Index: <span class="text-primary">25 - Extreme Fear</span></p>
+                <p class="header-content d-none d-lg-inline"></e>Crypto Fear & Greed Index: <span class="text-primary">25 - Extreme Fear</span></p>
             </div>
             <div class="col-3">
-                <p class="header-content d-none d-md-inline">CBBI Confidence We're At Peak:<span class="text-primary"> 10 of 100</span></p>
+                <p class="header-content d-none d-lg-inline">CBBI Confidence We're At Peak:<span class="text-primary"> 10 of 100</span></p>
+            </div>
+            <div class="d-lg-none d-inline col-md-6 col-12">
+                <form class="d-flex">
+                        <input class="form-control form-control-sm" type="search" aria-label="Search">
+                        <button class="btn btn-primary btn-sm" type="submit">Search</button>
+                </form>
             </div>
         </div>
     </div>
