--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="col">
                 <div class="btn-group" role="group" aria-label="login signup buttons">
                     <button class="btn btn-outline-primary btn-sm">Login</button>
-                    <button class="btn btn-primary btn-sm">Sign&nbsp;Up</button>
+                    <button class="btn btn-primary btn-sm accent-btn">Sign&nbsp;Up</button>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="col-0 d-none d-lg-inline col-lg-3">
                 <form class="d-flex me-0">
                         <input class="form-control form-control-sm" type="search" aria-label="Search">
-                        <button class="btn btn-primary btn-sm" type="submit">Search</button>
+                        <button class="btn btn-primary btn-sm  accent-btn" type="submit">Search</button>
                 </form>
             </div>
 
