--- a/learn.html
+++ b/learn.html
@@ -107,9 +107,55 @@
         </div>
     </div>
     </header>
-    
-    <footer>
-    </footer>
+
+    <!--News Headlines Section-->
+    <div class="container mt-5 text-center">
+        <div class="row">
+            <div class="col bg-dark text-primary py-5">
+                <h1>News Headlines Goes Here</h1>
+            </div>
+        </div>
+    </div>
+
+    <!--Crypto Table Section-->
+    <div class="container mt-5 text-center">
+        <div class="row">
+            <div class="col bg-dark text-primary py-5">
+                <h1>Crypto Table Goes Here</h1>
+            </div>
+        </div>
+    </div>
+
+    <!--Site Footer-->
+    <div class="container mt-5 text-center">
+        <div class="row">
+            <div class="col">
+                <hr class="header-line">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <ul class="nav list-group text-center">
+                    <li>
+                        <a class="text-dark  nav-link active" href="#">Cryptocurrencies</a>
+                    </li>
+                    <li>
+                        <a class="text-dark nav-link" href="exchanges.html">Exchanges</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="nav list-group text-center">
+                    <li>
+                        <a class="text-dark nav-link" href="tools.html">Trading Tools</a>
+                    </li>
+                    <li>
+                        <a class="text-dark nav-link" href="learn.html">Learn</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
