--- a/index.html
+++ b/index.html
@@ -23,29 +23,35 @@
         </div>
 
     </header>
-
-    <div class="card-group">
+    <div class="container">
+      <div class="row">
+        <div class="col col-sm-12">
+          <h1 class="text-center">Top Crypto News</h1>
+        </div>
+      </div>
+    </div>
+    <div class="card-deck p-3 border bg-primary">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="images/bankweathers.jpg" class="card-img-top" alt="test-image-1">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">News Headline 1</h5>
+            <p class="card-text">This area will display excerpt of top cryptocurrency news article</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="images/cryptonews.jpg" class="card-img-top" alt="test-image-2">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">News Headline 2</h5>
+            <p class="card-text">This area will display excerpt of top cryptocurrency news article</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="images/police.jpg" class="card-img-top" alt="test-image-3">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <h5 class="card-title">News Headline 3</h5>
+            <p class="card-text">This area will display excerpt of top cryptocurrency news article</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
