--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="col">
                 <div class="btn-group" role="group" aria-label="login signup buttons">
                     <button role="button" id="loginButton" class="btn btn-outline-primary btn-sm">Login</button>
-                    <button class="btn btn-primary btn-sm accent-btn">Sign&nbsp;Up</button>
+                    <button role="button" id="signupButton" class="btn btn-primary btn-sm accent-btn">Sign&nbsp;Up</button>
                 </div>
             </div>
         </div>
@@ -77,7 +77,46 @@
               </div>
           </div>
       </div>
-  
+      <div id="signupModal" class="modal fade" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Sign Up</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-12">
+                                    <label class="sr-only" for="loginEmail">Email address</label>
+                                    <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
+                                </div>
+                                <div class="form-group col-12">
+                                    <label class="sr-only" for="loginPassword">Password</label>
+                                    <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
+                                </div>
+                                <div class="form-group col-12">
+                                    <label class="sr-only" for="reenterloginPassword">Re-Enter Password</label>
+                                    <input type="password" class="form-control form-control-sm" id="reenterloginPassword" placeholder="Re-Enter Password">
+                                </div>
+                                <div class="col">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox">
+                                        <label class="form-check-label"> Remember me</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign Up</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
         <hr class="header-line">
 
