added links to current coin price info on coinmarketcap

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">1</th>
-                        <td><img src="images/bitcoin.png" alt="Bitcoin" width="25" height="25"> Bitcoin <span style="color:grey;">BTC</span></td>
+                        <td><img src="images/bitcoin.png" alt="Bitcoin" width="25" height="25"><a href="https://coinmarketcap.com/currencies/bitcoin/" target="_blank"> Bitcoin</a>  <span style="color:grey;">BTC</span></td>
                         <td>$19,845</td>
                         <td style="color:red;">-2.37%</td>
                         <td>$379,929,020,850</td>
@@ -246,7 +246,7 @@
                       </tr>
                       <tr>
                         <th scope="row">2</th>
-                        <td><img src="images/ethereum.png" alt="Ethereum" width="25" height="25"> Ethereum <span style="color:grey;">ETH</span></td>
+                        <td><img src="images/ethereum.png" alt="Ethereum" width="25" height="25"><a href="https://coinmarketcap.com/currencies/ethereum/" target="_blank"> Ethereum</a> <span style="color:grey;">ETH</span></td>
                         <td>$1,555</td>
                         <td style="color:red;">-4.75%</td>
                         <td>$190,184,323,246</td>
@@ -255,7 +255,7 @@
                       </tr>
                       <tr>
                         <th scope="row">3</th>
-                        <td><img src="images/tether.png" alt="Tether" width="25" height="25"> Tether <span style="color:grey;">USDT</span></td>
+                        <td><img src="images/tether.png" alt="Tether" width="25" height="25"><a href="https://coinmarketcap.com/currencies/tether/" target="_blank"> Tether</a> <span style="color:grey;">USDT</span></td>
                         <td>$1.00</td>
                         <td style="color:#5CC489;">0%</td>
                         <td>$67,555,226,786</td>
@@ -264,7 +264,7 @@
                       </tr>
                       <tr>
                         <th scope="row">4</th>
-                        <td><img src="images/usdc.png" alt="USD Coin" width="25" height="25"> USD Coin <span style="color:grey;">USDC</span></td>
+                        <td><img src="images/usdc.png" alt="USD Coin" width="25" height="25"><a href="https://coinmarketcap.com/currencies/usd-coin/" target="_blank"> USD Coin</a> <span style="color:grey;">USDC</span></td>
                         <td>$1.00</td>
                         <td style="color:#5CC489;">0%</td>
                         <td>$51,860,996,357</td>
@@ -273,7 +273,7 @@
                       </tr>
                       <tr>
                         <th scope="row">5</th>
-                        <td><img src="images/bnb.png" alt="BNB" width="25" height="25"> BNB <span style="color:grey;">BNB</span></td>
+                        <td><img src="images/bnb.png" alt="BNB" width="25" height="25"><a href="https://coinmarketcap.com/currencies/bnb/" target="_blank"> BNB</a> <span style="color:grey;">BNB</span></td>
                         <td>$277.10</td>
                         <td style="color:red;">-1.75%</td>
                         <td>$44,707,455,096</td>
@@ -282,7 +282,7 @@
                       </tr>
                       <tr>
                         <th scope="row">6</th>
-                        <td><img src="images/busd.png" alt="Binance USD" width="25" height="25"> Binance USD <span style="color:grey;">BUSD</span></td>
+                        <td><img src="images/busd.png" alt="Binance USD" width="25" height="25"><a href="https://coinmarketcap.com/currencies/binance-usd/" target="_blank"> Binance USD</a> <span style="color:grey;">BUSD</span></td>
                         <td>$1.00</td>
                         <td style="color:#5CC489;">0%</td>
                         <td>$19,562,431,433</td>
@@ -291,7 +291,7 @@
                       </tr>
                       <tr>
                         <th scope="row">7</th>
-                        <td><img src="images/xrp.png" alt="XRP" width="25" height="25"> XRP <span style="color:grey;">XRP</span></td>
+                        <td><img src="images/xrp.png" alt="XRP" width="25" height="25"><a href="https://coinmarketcap.com/currencies/xrp/" target="_blank"> XRP</a><span style="color:grey;"> XRP</span></td>
                         <td>$0.3292</td>
                         <td style="color:red;">-0.83%</td>
                         <td>$16,344,721,611</td>
@@ -300,7 +300,7 @@
                       </tr>
                       <tr>
                         <th scope="row">8</th>
-                        <td><img src="images/cardano.png" alt="Cardano" width="25" height="25"> Cardano <span style="color:grey;">ADA</span></td>
+                        <td><img src="images/cardano.png" alt="Cardano" width="25" height="25"><a href="https://coinmarketcap.com/currencies/cardano/" target="_blank"> Cardano</a> <span style="color:grey;">ADA</span></td>
                         <td>$0.4749</td>
                         <td style="color:#5CC489;">2.62%</td>
                         <td>$16,201,569,319</td>
@@ -309,7 +309,7 @@
                       </tr>
                       <tr>
                         <th scope="row">9</th>
-                        <td><img src="images/solana.png" alt="Solana" width="25" height="25"> Solana <span style="color:grey;">SOL</span></td>
+                        <td><img src="images/solana.png" alt="Solana" width="25" height="25"><a href="https://coinmarketcap.com/currencies/solana/" target="_blank"> Solana</a> <span style="color:grey;">SOL</span></td>
                         <td>$31.14</td>
                         <td style="color:red;">-3.11%</td>
                         <td>$10,891,719,564</td>
@@ -318,7 +318,7 @@
                       </tr>
                       <tr>
                         <th scope="row">10</th>
-                        <td><img src="images/dogecoin.png" alt="Dogecoin" width="25" height="25"> Dogecoin <span style="color:grey;">DOGE</span></td>
+                        <td><img src="images/dogecoin.png" alt="Dogecoin" width="25" height="25"><a href="https://coinmarketcap.com/currencies/dogecoin/" target="_blank"> Dogecoin</a> <span style="color:grey;">DOGE</span></td>
                         <td>$0.06281</td>
                         <td style="color:#5CC489;">0.72%</td>
                         <td>$8,299,645,025</td>
